# meta-hackathon

./: .dockerignore  .env  README.md  __init__.py  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  result.txt  validate-submission.sh
data/: __init__.py  itr_generator.py
server/: Dockerfile  __init__.py  app.py  itr_environment.py  requirements.txt
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
